# Fontshow

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  .ruff.toml  404.html  CHANGELOG.md  LICENSE  README.md  catalogo_font_sistema_Linux_20251220_000.tex  catalogo_font_sistema_Windows_20251214.tex  catalogo_font_sistema_Windows_20251216_000.tex  catalogo_font_sistema_Windows_20251216_002.tex  catalogo_font_sistema_Windows_20251216_003.tex  crea_catalogo.py  crea_catalogo_pipeline_v2.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  test_output_Windows_20251216_000.txt
.githooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md
Linux/: crea_catalogo.py
Windows/: catalogo_font_sistema.tex  crea_catalogo.py  crea_catalogo_esclusi.py  prova_aggiunte.py
architecture/: index.html
create_catalog/: index.html
data_dictionary/: index.html
docs/: architecture.md  cheatsheet.md  create_catalog.md  data_dictionary.md  decisions.md  dump-fonts.md  dump_fonts.md  font-inventory-schema.md  font-inventory.md  fonttools-integration.md  index.md  parse-font-inventory.md  parse_font_inventory.md  pipeline.md  testing.md  todo.md
dump_fonts/: index.html
fontshow/: create_catalog.py  dump_fonts.py  parse_font_inventory.py
parse_font_inventory/: index.html
scripts/: clean_repo.py  crea_catalogo_esclusi.py  dump_fonts.py  dump_fonts_fc.py  generate_cheatsheet.py  parse_fc_list.py  parse_font_inventory.py  prova_aggiunte.py  set_version.py
search/: search_index.json
testing/: index.html
tests/: helpers.py  (+5 more)
(+6 files in other folders)
